[gd_scene load_steps=8 format=3 uid="uid://c762jp7x13pu4"]

[ext_resource type="Script" path="res://scenes/campfire/campfire_option.gd" id="1_4ox8i"]
[ext_resource type="Script" path="res://scenes/campfire/card_reflect.gd" id="1_fg2qa"]
[ext_resource type="FontFile" uid="uid://m5p4iu6lt5ju" path="res://fonts/shadows_into_light/ShadowsIntoLight-Regular.ttf" id="2_0cvi2"]
[ext_resource type="AudioStream" uid="uid://c1ednfjyp54fj" path="res://sounds/sfx/click L.mp3" id="3_0ej0g"]
[ext_resource type="AudioStream" uid="uid://bmypdkolpf2md" path="res://sounds/sfx/hover.mp3" id="5_131g4"]

[sub_resource type="LabelSettings" id="LabelSettings_ek5ec"]
font = ExtResource("2_0cvi2")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_2auem"]
line_spacing = -10.0
font = ExtResource("2_0cvi2")
font_size = 28

[node name="CampfireOption" type="Control"]
layout_mode = 3
anchor_left = 0.75
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.85
mouse_filter = 2
script = ExtResource("1_4ox8i")

[node name="Outline" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Card" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)
script = ExtResource("1_fg2qa")

[node name="Option" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.0
offset_right = 34.0
offset_bottom = 52.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Option"
label_settings = SubResource("LabelSettings_ek5ec")
uppercase = true

[node name="Body" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Description" type="Label" parent="Body"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 41.0
grow_horizontal = 2
text = "Description"
label_settings = SubResource("LabelSettings_2auem")
autowrap_mode = 3

[node name="ClickSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_0ej0g")

[node name="HoverSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_131g4")

[connection signal="gui_input" from="Card" to="Card" method="_on_input_event"]
[connection signal="mouse_entered" from="Card" to="Card" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Card" to="Card" method="_on_mouse_exited"]
[connection signal="option_clicked" from="Card" to="." method="_on_card_option_clicked"]
